code cleanups. add CCMISApprox.